Archive2/d9/ef27eb301f4745/output/output
main.cpp:7:9: error: use of undeclared identifier 'p'; did you mean 'S::p'?
    s->*p;
        ^
        S::p
main.cpp:2:10: note: 'S::p' declared here
    int *p;  
         ^
main.cpp:7:9: error: invalid use of non-static data member 'p'
    s->*p;
        ^
2 errors generated.
